Fix Tone.js: revert to stable v14.8.49 (v15.x is ESM-only)

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/UnrealBloomPass.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/LuminosityHighPassShader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/CopyShader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/tone@15.1.22/dist/Tone.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
     <script>
 const GameState={MENU:'menu',PLAYING:'playing',PAUSED:'paused',VICTORY:'victory',DEAD:'dead',LEVEL_SELECT:'level_select'};
 let state=GameState.MENU,currentLevel=0,switchCount=0,orbCount=0,gravity=new THREE.Vector3(0,-15,0),velocity=new THREE.Vector3(),levelCompleted=false,audioInitialized=false;
